Bug 394201 - Aspect ratio setting is not stored.
Summary: Aspect ratio setting is not stored.
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.15
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-13 11:44 UTC by romeoK
Modified: 2018-11-06 20:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description romeoK 2018-05-13 11:44:03 UTC
When changing the aspect ratio via context menu (for example to 4:3) the setting is not stored. Next time you open Kaffeine aspect ratio is set to automatic again (i believe) even none of the checkboxes in the context menu under 'video/aspect raio' is set.
Comment 1 Mauro Carvalho Chehab 2018-11-06 19:38:53 UTC
(In reply to romeoK from comment #0)
> When changing the aspect ratio via context menu (for example to 4:3) the
> setting is not stored. Next time you open Kaffeine aspect ratio is set to
> automatic again (i believe) even none of the checkboxes in the context menu
> under 'video/aspect raio' is set.

Yes, right now, we don't store aspect ratio or video size. We also don't store other parameters that can be a personal preference for an specific video (or TV program), like subtitles.

In the specific case of aspect ratio, I understand that some users may actually want to force it to a certain aspect ratio (for example, the ones with ultrawide monitors).

I guess the best would be to add a command line parameter, allowing the user to force Kaffeine to start with an specific aspect ratio (just like what we do for full screen, minimal and always on top settings).
Comment 2 Mauro Carvalho Chehab 2018-11-06 20:31:17 UTC
Git commit 995981b3d490cae7d26121a3aaffb116fb3e1a47 by Mauro Carvalho Chehab.
Committed on 06/11/2018 at 20:30.
Pushed by mauroc into branch 'master'.

mainwindow: add an option to force an specific aspect ratio

Usually, aspect ratio is something that the user changes as it
wish, depending on the video source. However, users with wide
monitors may opt to always force to a certain aspect ratio, in
order to fit better on their screens.

So, add a command line option to force it.

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>

M  +13   -0    doc/man-kaffeine.1.docbook
M  +28   -0    src/mainwindow.cpp
M  +7    -0    src/mediawidget.cpp
M  +1    -0    src/mediawidget.h

https://commits.kde.org/kaffeine/995981b3d490cae7d26121a3aaffb116fb3e1a47