mainwindow: add an option to force an specific aspect ratio

Usually, aspect ratio is something that the user changes as it
wish, depending on the video source. However, users with wide
monitors may opt to always force to a certain aspect ratio, in
order to fit better on their screens.

So, add a command line option to force it.

BUG: 394201

Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>